SocialMediaProject_include/socialmedia/kubernetes/service.yml
apiVersion: v1
kind: Service

metadata:
  name: briezl-service
  namespace: briezl

spec:
  selector:
    app: briezl-social-media

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: ClusterIP
