SocialMediaProject_include/socialmedia/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: briezl-ingress
  namespace: briezl

spec:
  rules:
    - host: briezl.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: briezl-service

                port:
                  number: 80
